# ego-gomoku-zero

./: .gitignore  Analyzer.cpp  Analyzer.h  AnalyzerTest.cpp  AnalyzerTest.h  Bridge.cpp  Bridge.h  CMakeLists.txt  ConfigReader.h  Console.cpp  Console.h  Evaluate.cpp  Evaluate.h  Game.cpp  Game.h  Game.py  GameTest.cpp  GameTest.h  GenerateOpenings.cpp  GenerateOpenings.h  IModel.h  MCTS.cpp  MCTS.h  MTCS.cpp  MTCS.py  Main.cpp  Main.py  Model.cpp  Model.h  Network.cpp  Network.h  Network.py  ONNXBackend.cpp  ONNXBackend.h  OnnxConvert.py  Piskvork.cpp  Pisqpipe.cpp  Pisqpipe.h  PolicyValueNetwork.py  Pruner.cpp  (+36 more)
helper/: actionConvert.py  actions.txt  pmoveConvert.py  pmoves.txt  pmoves2.txt  pmoves3.txt  pmoves4.txt  pmoves5.txt  pmoves6.txt  pmoves7.txt  pmoves8.txt
model/: net_1000.mdl
openings/: openings.txt
opennings/: opennings.txt
test/: AnalyzerTest.cpp  GameTest.cpp  MCTSTest.cpp  ShapeTest.cpp  TestAssistant.cpp
train/: Bridge.py  ConfigReader.py  Game.py  GameUI.py  GenerateOpenings.py  Main.py  MainCpp.py  Network.py  Train.py  Utils.py  Watch.py  WatchAgent.py  WatchMcts.py  application.conf  openings_viewer.py  training_monitor.py
train/openings/: openings.txt  openings_manual.txt  readme.md
